ok, finished this task

--- a/scripts/R34_human_entercoccus_bloom.Rmd
+++ b/scripts/R34_human_entercoccus_bloom.Rmd
@@ -93,9 +93,6 @@ p2 <- bloom_days_per_patient %>%
     plot.title = element_text(face = "bold"),
     strip.text = element_text(face = "bold") # Bolds the facet titles
   )
-
-
-
 ```
 
 
@@ -261,5 +258,68 @@ bloom0.3 <- ggplot(analysis_data_high, aes(x = broad_spectrum_exposure_days, y =
 # Use the patchwork library to combine the two plots into a single figure.
 p1 + p2 + bloom0.1 + bloom0.3
 ggsave('../data/R34_pt_enterococcus_bloom.png', width = 12, height = 10)
+```
+# the days between the first and last day of Entercoccus relab >= XXXX
+
+
+```{r}
+# This function calculates the summary statistics for a given threshold.
+# This avoids repeating code.
+calculate_duration <- function(data, threshold) {
+  data %>%
+    group_by(pid) %>%
+    summarise(
+      first_sdrt_high_entero = min(sdrt[Enterococcus_relab >= threshold], na.rm = TRUE),
+     last_sdrt_high_entero = max(sdrt[Enterococcus_relab >= threshold], na.rm = TRUE),
+      .groups = 'drop'
+    ) %>%
+    mutate(
+      first_sdrt_high_entero = if_else(is.infinite(first_sdrt_high_entero), NA_real_, first_sdrt_high_entero),
+      duration_days = if_else(is.na(first_sdrt_high_entero), NA_real_, as.numeric(last_sdrt_high_entero - first_sdrt_high_entero + 1)),
+      threshold_label = paste(">=", threshold) # Add a label for plotting
+    ) %>%
+    filter(!is.na(duration_days)) # Remove patients who never met the threshold
+}
+
+# Calculate summaries for both thresholds and combine them into one dataframe.
+summary_0.1 <- calculate_duration(enterococcus_abundance, 0.1)
+summary_0.3 <- calculate_duration(enterococcus_abundance, 0.3)
+combined_summary <- bind_rows(summary_0.1, summary_0.3)
+
+# --- Plotting Section ---
+
+# Create a helper dataframe for annotations (patient counts).
+annotation_data <- combined_summary %>%
+  group_by(threshold_label) %>%
+  summarise(patient_count = n(), .groups = 'drop')
+
+# Create the faceted plot.
+ggplot(combined_summary, aes(x = "", y = duration_days)) +
+  geom_boxplot(width = 0.4, outlier.shape = NA) +
+  geom_jitter(width = 0.1, alpha = 0.6, color = "steelblue") +
+  stat_summary(fun = mean, geom = "point", shape = 23, size = 4, fill = "white") +
+  
+  # Use facet_wrap to create separate plots for each threshold.
+  # This is the key to ensuring the y-axes are on the same scale.
+  facet_wrap(~ threshold_label) +
+  
+  # Add the patient count annotations to each facet.
+  geom_text(data = annotation_data, 
+            aes(x = 1.4, y = Inf, label = paste("n =", patient_count, "patients")), 
+            vjust = 2) +
+  
+  labs(
+    title = "Duration of Enterococcus Dominance by Threshold",
+    y = "Duration (days)",
+    x = ""
+  ) +
+  theme_minimal() +
+  theme(
+    axis.text.x = element_blank(),
+    axis.ticks.x = element_blank(),
+    plot.title = element_text(hjust = 0.5, face = "bold"),
+    strip.text = element_text(face = "bold") # Make facet labels bold
+  )
+
 ```
 
