--- a/scripts/R31_new_mice.Rmd
+++ b/scripts/R31_new_mice.Rmd
@@ -755,93 +755,119 @@ ggplot(processed_data, aes(x = plot_group, y = cf_us_per_gram_stool)) +
   coord_cartesian( clip = "off")
 ```
 
-# sugar delayed 1
+# sugar delayed 
 
 ## design
 
 ```{r}
-# Load the required R packages
-library(ggplot2)
-library(dplyr)
-
-# Data definition for points and segments
-point_data <- tibble::tribble(
-  ~group,                ~event,             ~day,
-  "Standard",            "Antibiotic",       1, "Delay +1",            "Antibiotic",       1, "Delay +2",            "Antibiotic",       1,
-  "Standard",            "Stool Collection", 1, "Delay +1",            "Stool Collection", 1, "Delay +2",            "Stool Collection", 1,
-  "Standard",            "Stool Collection", 3, "Delay +1",            "Stool Collection", 3, "Delay +2",            "Stool Collection", 3,
-  "Standard",            "Stool Collection", 6, "Delay +1",            "Stool Collection", 6, "Delay +2",            "Stool Collection", 6,
-  "Standard",            "Stool Collection", 9, "Delay +1",            "Stool Collection", 9, "Delay +2",            "Stool Collection", 9
+# Define the experimental groups and their properties
+groups <- tibble(
+  group_name = factor(
+    c("Abx + Sucrose (Standard)", "Abx + Sucrose (Delay +1)", "Abx + Sucrose (Delay +2)", "PBS + Sucrose", "PBS + Water"),
+    levels = c("PBS + Water", "PBS + Sucrose", "Abx + Sucrose (Delay +2)", "Abx + Sucrose (Delay +1)", "Abx + Sucrose (Standard)")
+  ),
+  injection_type = c("Abx", "Abx", "Abx", "PBS", "PBS"),
+  treatment_type = c("Sucrose_water", "Sucrose_water", "Sucrose_water", "Sucrose_water", "Regular_water"),
+  treatment_start = c(1, 2, 3, 1, 1),
+  treatment_end = c(6, 6, 6, 6, 6)
 )
 
-segment_data <- tibble::tribble(
-    ~group,      ~start, ~end,
-    "Standard",  1,      6,
-    "Delay +1",  2,      6,
-    "Delay +2",  3,      6
-)
+# --- Prepare data for plotting ---
 
-group_order <- c("Standard", "Delay +1", "Delay +2")
-point_data$group <- factor(point_data$group, levels = group_order)
-segment_data$group <- factor(segment_data$group, levels = group_order)
-
-# --- Fully Corrected ggplot Code ---
-ggplot() +
-  geom_hline(yintercept = 0, color = "gray50", linewidth = 0.6) +
-  geom_segment(
-    data = segment_data,
-    aes(x = start, xend = end, y = 0, yend = 0),
-    color = "#E41A1C",
-    linewidth = 5,
-    alpha = 0.8
-  ) +
-  geom_point(
-    data = point_data,
-    aes(x = day, y = 0, shape = event, color = event),
-    size = 6,
-    fill = "white",
-    stroke = 1.2
-  ) +
-  geom_point(aes(x = -100, y = -100, fill = "Sucrose"), shape = 22, size = 5) +
-  scale_fill_manual(
-    name = NULL,
-    values = c("Sucrose" = "#E41A1C"),
-    labels = c("Sucrose" = "Sucrose Treatment")
-  ) +
-  facet_wrap(~group, ncol = 1, strip.position = "left") +
-  scale_color_manual(
-    name = "Event",
-    values = c("Antibiotic" = "#377EB8", "Stool Collection" = "black"),
-    labels = c("Antibiotic" = "Single Antibiotic Dose", "Stool Collection" = "Stool Collection")
-  ) +
-  scale_shape_manual(
-    name = "Event",
-    values = c("Antibiotic" = 24, "Stool Collection" = 16),
-    labels = c("Antibiotic" = "Single Antibiotic Dose", "Stool Collection" = "Stool Collection")
-  ) +
-  labs(
-    title = "Experimental Design: Delayed Sucrose Administration",
-    x = "Day of Experiment",
-    y = NULL
-  ) +
-  theme_minimal(base_size = 14) +
-  theme(
-    axis.text.y = element_blank(),
-    axis.ticks.y = element_blank(),
-    panel.grid.major.y = element_blank(),
-    panel.grid.minor.y = element_blank(),
-    panel.grid.minor.x = element_blank(),
-    strip.text.y.left = element_text(angle = 0, face = "bold"),
-    legend.position = "bottom",
-    legend.box = "horizontal",
-    plot.title = element_text(hjust = 0.5, face = "bold", size = 16)
-  ) + # The '+' now correctly connects theme() to the next component
-  scale_x_continuous(breaks = seq(0, 10, 1), limits = c(0, 10)) +
-  guides(
-    color = guide_legend(nrow = 1),
-    shape = guide_legend(nrow = 1),
-    fill = guide_legend(nrow = 1)
+# Data for the treatment rectangles (sucrose/water)
+# Adding a small buffer to the end day for better visualization
+treatment_rects <- groups %>%
+  mutate(
+    ymin = as.numeric(group_name) ,
+    ymax = as.numeric(group_name) + 0.3,
+    xmin = treatment_start,
+    xmax = treatment_end  
   )
+
+# Data for the stool collection points (triangles)
+stool_collection <- groups %>%
+  select(group_name) %>%
+  crossing(day = c(1, 3, 6)) %>%
+  mutate(y = as.numeric(group_name))
+
+# Data for the injection points (arrows)
+injections <- groups %>%
+  select(group_name, injection_type) %>%
+  mutate(
+    y = as.numeric(group_name) + 0.25,
+    day = 1
+    )
+
+# --- Create the plot ---
+ggplot() +
+  # Add shaded rectangles for sucrose/water treatment periods
+  geom_rect(
+    data = treatment_rects,
+    aes(xmin = xmin, xmax = xmax, ymin = ymin, ymax = ymax, fill = treatment_type),
+    alpha = 0.3
+  ) +
+  # Add the main timeline for each group
+  geom_segment(
+    data = groups,
+    aes(x = 1, xend = 6, y = as.numeric(group_name), yend = as.numeric(group_name)),
+    color = "gray50",
+    linewidth = 1
+  ) +
+  # Add arrows for Abx/PBS injections on Day 1
+  geom_segment(
+    data = injections,
+    aes(x = day+0.05, xend = day+0.05, y = y + 0.2, yend = y),
+    arrow = arrow(length = unit(0.2, "cm")),
+    color = "black",
+    linewidth = 0.8
+  ) +
+  # Add labels for the injections
+  geom_text(
+    data = injections,
+    aes(x = day+0.05, y = y + 0.35, label = injection_type),
+    fontface = "bold",
+    size = 2.5
+  ) +
+  # Add triangles for stool collection days
+  geom_point(
+    data = stool_collection,
+    aes(x = day, y = y),
+    shape = 17, # Triangle shape
+    size = 2.5,
+    color = "black" # A reddish color
+  ) +
+  # Customize colors for treatments
+  scale_fill_manual(
+    name = "Diet Treatment",
+    values = c("Sucrose_water" = "#F8766D", "Regular_water" = "#999999")
+  ) +
+  # Set the labels for the y-axis
+  scale_y_continuous(
+    breaks = 1:length(levels(groups$group_name)),
+    labels = levels(groups$group_name),
+    limits = c(0.5, length(levels(groups$group_name)) + 1)
+  ) +
+  # Set the labels and limits for the x-axis
+  scale_x_continuous(
+    name = "Day",
+    breaks = 1:6,
+    limits = c(.8, 6.5)
+  ) +
+  # Add titles and theme
+  labs(
+    title = "Experimental Design for Sucrose Delay Study",
+    #subtitle = "Timeline of treatments and sample collections for each group",
+    y = "Experimental Group"
+  ) +
+  theme_classic() +
+  theme(
+    plot.title = element_text(hjust = 0.5, face = "bold", size = 16),
+    plot.subtitle = element_text(hjust = 0.5, size = 11),
+    axis.text = element_text(size = 10),
+    axis.title = element_text(size = 11, face = "bold"),
+    legend.position = "top"
+  )
+ggsave('../data/R31_delay_design.jpg')
 ```
 ## CFU
 
@@ -852,9 +878,13 @@ delay1 <- read_csv('../data/8_5_25_Biapenem_Sugar_Delay_1.csv') %>%
   mutate(logCFU = log10(cf_us_per_gram_stool)) %>% 
   mutate(
     trajectory_group = paste(treatment, mouse_identifier, sep = "_")
-  ) 
+  )
+
+delay1 %>% write_csv('../data/R31_Biapenem_Sugar_Delay_1.csv')
+```
 
 
+```{r}
 ggplot(delay1, aes(x = factor(day), y = cf_us_per_gram_stool)) +
   # Use a boxplot to show the distribution of CFU/g at each day.
   # A small value (1) is added to cfu_per_gram to avoid issues with taking the log of zero.
